%% GENERATED by scripts/gen_state_diagrams.py -- DO NOT EDIT.
%% CI regenerates this and fails if it differs from the table.

stateDiagram-v2
    [*] --> WISHED
    WISHED --> QUEUED: RESOLVED
    QUEUED --> ACQUIRING: FRAMES_ADDED
    ACQUIRING --> ACQUIRING: FRAMES_ADDED
    ACQUIRING --> CONVERGED: CONVERGENCE_MET
    CONVERGED --> ACQUIRING: CONVERGENCE_LOST
    CONVERGED --> RENDERING: RENDER_STARTED
    RENDERING --> RENDERING: RENDER_DONE
    RENDERING --> CONVERGED: RENDER_FAILED
    RENDERING --> PUBLISHED: PUBLISH_DONE
    PUBLISHED --> RETIRED: RETIRE
    PUBLISHED --> ACQUIRING: REOPENED
    RETIRED --> ACQUIRING: REOPENED
    WISHED --> RETIRED: RETIRE
    QUEUED --> RETIRED: RETIRE
    ACQUIRING --> RETIRED: RETIRE
    CONVERGED --> RETIRED: RETIRE
